--- a/timetable_style.css
+++ b/timetable_style.css
@@ -14,27 +14,11 @@ body{
     background-size: cover;
     font-family: 'Times New Roman', Times, serif;
 }
-.heading{
-    background: linear-gradient( to right bottom, rgba(177, 219, 177, 0.705), rgba(94, 128, 94, 0.705));
-    widows: 30em;
-    text-align: center;
-    text-transform: uppercase;
-    margin-top: .1em;
-    border-top-left-radius: 2em;
-    border-top-right-radius: 2em;
-    box-shadow: 1em 1.5em 3em 0 rgba(0, 0, 0, 0.375);
-}
 .heading-primary{
 margin: .8em 1em;
 font-weight: 900;
 font-size: 2.2em;
 color: teal;
-}
-.heading-secondary{
-    margin: .8em 1em;
-    font-weight: 800;
-    font-size: 1.7em;
-    color: teal;
 }
 .heading-tertiary{
     margin: .8em 1em;
@@ -202,12 +186,107 @@ footer{
     padding: .5em .7em;
     font-weight:900;
 }
+.main{
+    position: relative;
+}
+@media only screen and (min-width:1100px){
+    .heading{
+        background: linear-gradient( to right bottom, rgba(177, 219, 177, 0.705), rgba(94, 128, 94, 0.705));
+        widows: 30em;
+        text-align: center;
+        text-transform: uppercase;
+        margin-top: .1em;
+        border-top-left-radius: 2em;
+        border-top-right-radius: 2em;
+        box-shadow: 1em 1.5em 3em 0 rgba(0, 0, 0, 0.375);
+    }
+    .heading-secondary{
+        margin: .8em 1em;
+        font-weight: 800;
+        font-size: 1.7em;
+        color: teal;
+        text-align: center;
 
-.grid{
-    display: table;
-    
+    }
+    .grid{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        justify-content: flex-start;
+        align-items: flex-start;
+     }
+     .row{
+         margin-bottom: .1em;
+     }
 }
-.row--of-2{
-    
-    display: table-cell;
+@media only screen and (max-width:600px){
+    .heading{
+        background: linear-gradient( to right bottom, rgba(177, 219, 177, 0.705), rgba(94, 128, 94, 0.705));
+        widows: 30em;
+        text-align: center;
+        text-transform: uppercase;
+        margin-top: .1em;
+        border-top-left-radius: 2em;
+        border-top-right-radius: 2em;
+        box-shadow: 1em 1.5em 3em 0 rgba(0, 0, 0, 0.375);
+        padding-top: 5em;
+    }
+    .notes{
+        display: block;
+        font-size: 4em;
+        text-decoration: none;
+        text-transform: capitalize;
+        position: absolute;
+        left: 45%;
+        top: 1%;
+        
+    }
+    .heading-secondary{
+        margin: .8em 1em;
+        font-weight: 500;
+        font-size: 1.5em;
+        color: teal;
+        text-align: center;
+    }
+ .grid{
+     display: grid;
+     grid-template-rows: auto;
+     justify-content: flex-start;
+   align-items: flex-start;
+ }
 }
+@media only screen and (max-width:900px){
+    .heading{
+        background: linear-gradient( to right bottom, rgba(177, 219, 177, 0.705), rgba(94, 128, 94, 0.705));
+        widows: 30em;
+        text-align: center;
+        text-transform: uppercase;
+        margin-top: .1em;
+        border-top-left-radius: 2em;
+        border-top-right-radius: 2em;
+        box-shadow: 1em 1.5em 3em 0 rgba(0, 0, 0, 0.375);
+        padding-top: 5em;
+    }
+    .notes{
+        display: block;
+        font-size: 4em;
+        text-decoration: none;
+        text-transform: capitalize;
+        position: absolute;
+        left: 45%;
+        top: 1%;
+        
+    }
+    .heading-secondary{
+        margin: .8em 1em;
+        font-weight: 800;
+        font-size: 1.7em;
+        color: teal;
+        text-align: center;
+    }
+    .grid{
+        display: grid;
+        grid-template-rows: auto;
+        justify-content: flex-start;
+      align-items: flex-start;
+    }
+   }
