--- a/timetable_style.css
+++ b/timetable_style.css
@@ -188,6 +188,20 @@ footer{
     position: relative;
 }
 @media only screen and (min-width:1100px){
+    .notes{
+        display: block;
+        font-size: 2em;
+        text-decoration: none;
+        text-transform: capitalize;
+        position: absolute;
+        left: 40%;
+        top: 4%;
+        background-color: skyblue;
+        padding: 2% 10%;
+        color: black;
+        border-radius: .8em;
+        
+    }
     .heading{
         background: linear-gradient( to right bottom, rgba(177, 219, 177, 0.705), rgba(94, 128, 94, 0.705));
         widows: 30em;
@@ -197,6 +211,7 @@ footer{
         border-top-left-radius: 2em;
         border-top-right-radius: 2em;
         box-shadow: 1em 1.5em 3em 0 rgba(0, 0, 0, 0.375);
+        padding-top:20em;
     }
     .heading-secondary{
         margin: .8em 1em;
@@ -248,16 +263,20 @@ footer{
         border-top-left-radius: 2em;
         border-top-right-radius: 2em;
         box-shadow: 1em 1.5em 3em 0 rgba(0, 0, 0, 0.375);
-        padding-top: 5em;
+        padding-top: 16em;
     }
     .notes{
         display: block;
-        font-size: 4em;
+        font-size: 2em;
         text-decoration: none;
         text-transform: capitalize;
         position: absolute;
-        left: 45%;
-        top: 1%;
+        left: 35%;
+        top: 1;
+        background-color: skyblue;
+        padding: 2% 10%;
+        color: black;
+        border-radius: .8em;
         
     }
     .heading-secondary{
@@ -284,18 +303,22 @@ footer{
         border-top-left-radius: 2em;
         border-top-right-radius: 2em;
         box-shadow: 1em 1.5em 3em 0 rgba(0, 0, 0, 0.375);
-        padding-top: 5em;
+        padding-top: 12em;
     }
-    .notes{
+     .notes{
         display: block;
         font-size: 4em;
         text-decoration: none;
         text-transform: capitalize;
         position: absolute;
-        left: 45%;
+        left: 36%;
         top: 1%;
+        background-color: skyblue;
+        padding: 2% 10%;
+        color: black;
+        border-radius: .8em;
         
-    }
+    } 
     .heading-secondary{
         margin: .8em 1em;
         font-weight: 800;
